fix: 예약 가능 시간 조회에서 alreadyBooked 값 부정확한 버그 수정